[package]
name = "actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = "2.1.4"
env_logger = "0.11.2"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
